Added event type model.
