# src/eventType/eventType.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { searchMiddleware } from "../middlewares";
+import { getEventTypes } from "./eventType.controllers";
+
+const eventTypesRouter = Router();
+
+eventTypesRouter.route("/event_types").get(searchMiddleware, getEventTypes);
+
+export default eventTypesRouter;
