# src/eventType/eventType.services.ts
@@ -1,0 +1,11 @@
+import db from "../utils/db";
+
+export const findEventTypesByTitle = (title: string = "") => {
+    return db.eventType.findMany({ where: { title: { contains: title, mode: "insensitive" } } })
+}
+
+export const findEventTypeById = (id: number) => {
+    return db.eventType.findFirst({
+        where: { id },
+    });
+}
